--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             // Define a message handler for the worker
             worker.onmessage = function(event) {
               // Send the result back to Dart
-              window.flutter_inject.postMessage(event.data);
-              window.outputChannel.postMessage(event.data);
+              window.flutter_inject.postMessage(event);
+              window.outputChannel.postMessage(event);
             };
 
           </script>
