Worker event listener

--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
             // Define a message handler for the worker
             worker.onmessage = function(event) {
               // Send the result back to Dart
-              window.flutter_inject.postMessage(event);
-              window.outputChannel.postMessage(event);
+              window.flutter_inject.postMessage(event.data);
+              window.outputChannel.postMessage(event.data);
             };
+
+            worker.addEventListener('error', function(event) {
+               window.flutter_inject.postMessage(event.message);
+            })
 
           </script>
         </body>
