--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
                 margin: 0;
             }
             canvas {
-                width: 100%;
-                height: 100%
+                width: 0%;
+                height: 0%
             }
         </style>
     </head>
         <body>
-         <h1>Hello!!</h1>
           <script>
             window.flutter_inject.postMessage("Loading poll lib");
           </script>
@@ -20,6 +19,9 @@
           <script>
             // Define a Web Worker to run WebAssembly code
             const worker = new Worker("worker.js");
+            function vote(poll_id, choices, num_choices, poll_pub_key) {
+                worker.postMessage({poll_id, choices, num_choices, poll_pub_key});
+            }
             window.flutter_inject.postMessage("Calling..");
             setInterval(function() {
                 try {
