--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             // Define a Web Worker to run WebAssembly code
             const worker = new Worker("worker.js");
             function vote(poll_id, choices, num_choices, poll_pub_key) {
-                window.flutter_inject.postMessage("Received vote request..");
+                window.flutter_inject.postMessage(`Received vote request.. ${poll_id} ${choices} ${num_choices} ${poll_pub_key}`);
                 worker.postMessage({poll_id, choices, num_choices, poll_pub_key});
             }
             window.flutter_inject.postMessage("Calling..");
