--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             // Define a message handler for the worker
             worker.onmessage = function(event) {
               // Send the result back to Dart
-              //window.flutter_inject.postMessage(JSON.stringify(event.data));
-              window.outputChannel.postMessage(JSON.stringify(event.data));
+              window.flutter_inject.postMessage(event.data);
+              window.outputChannel.postMessage(event.data);
             };
 
             worker.addEventListener('error', function(event) {
