--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@
             window.worker = worker;
             function vote(platform, poll_id, choices, num_choices, poll_pub_key) {
                 window.flutter_inject.postMessage(`Received vote request.. ${platform} ${poll_id} ${choices} ${num_choices} ${poll_pub_key}`);
-                if (platform === 1) {
-                  window.worker.postMessage(JSON.stringify({platform, poll_id, choices, num_choices, poll_pub_key}));
-                } else {
-                  window.worker.postMessage({platform, poll_id, choices, num_choices, poll_pub_key});
-                }
+                window.worker.postMessage(JSON.stringify({platform, poll_id, choices, num_choices, poll_pub_key}));
             }
            // window.flutter_inject.postMessage("Calling..");
             /*setInterval(function() {
                 try {
                     window.flutter_inject.postMessage("Posting message...");
-                worker.postMessage({});
+                    vote(1, 2, [0], 5, 'MC6xp3UbtRrh9Chf_9JsjbmzUqjyvPz3EIoq82YMVTo');
                 } catch (e) {
                     window.flutter_inject.postMessage("Error");
                 }
@@ -43,13 +39,8 @@
             worker.onmessage = function(event) {
               // Send the result back to Dart
               window.flutter_inject.postMessage("Received vote response.. " + typeof (event.data));
-              try {
-                window.flutter_inject.postMessage(event.data);
-                window.outputChannel.postMessage(event.data);
-              } catch (e) {
-                window.flutter_inject.postMessage(JSON.stringify(event.data));
-                window.outputChannel.postMessage(JSON.stringify(event.data));
-              }
+              window.flutter_inject.postMessage(event.data);
+              window.outputChannel.postMessage(event.data);
             };
 
             worker.addEventListener('error', function(event) {
